Fixed spacing at top of content in chrome
Removed notices

--- a/app/assets/stylesheets/login.css.scss
+++ b/app/assets/stylesheets/login.css.scss
@@ -2,7 +2,7 @@
   z-index: 90;
   display: none;
   position: absolute;
-  right: -5%;
+  right: -3%;
   top: 54px;
   background-color: #DDD;
   border: 2px solid #BBB;
