--- a/app/assets/stylesheets/static.css.scss
+++ b/app/assets/stylesheets/static.css.scss
@@ -15,6 +15,8 @@ body{
   background-color: #CCC;
   border-bottom: 2px solid #BBB;
   width: 100%;
+  height: $header-height;
+  line-height: $header-height;
   display: inline-block;
   //TODO: alert in mini-form
   .header-content {
@@ -34,7 +36,8 @@ body{
     .headerUserActions {
       float: right;
       padding-right: 20px;
-      margin: 8px 0;
+      margin: 10px 0;
+      line-height: 20px;
     }
 
     #login, #logout, #sign-up {
@@ -69,7 +72,7 @@ body{
   max-width: 1200px;
   min-width: 800px;
   min-height: 400px;
-  margin: auto;
+  margin: 50px auto auto;
   background-color: #EEE;
   border-left: 2px solid #CCC;
   border-right: 2px solid #CCC;
